StyledLabel: Fix default alignment in RTL

The default alignment of label was wrong. It should be always ALIGN_LEFT
no matter it is RTL or LTR. The default behavior is to align left in LTR
UI and right in RTL UI.

Bug: 850390
Test: add new unittest: StyledLabelTest.*AlignmentInRTL*
Change-Id: I058afab144acd46e221f889c57207340ef5aa26e
Reviewed-on: https://chromium-review.googlesource.com/1094328
Commit-Queue: Tao Wu <wutao@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566573}
Former-commit-id: 51b82ab377fcaa288ac00464ebfc2398971109ca